# Resume-Shortlisting-System

./: .gitignore  .replit  .vercelignore  app.py  database.py  generate_samples.py  pyproject.toml  replit.md  requirements.txt  requirements.txt.txt  sample_job_description.txt
sample_resumes/: david_kim_resume.docx  emily_rodriguez_resume.docx  john_smith_resume.docx  lisa_anderson_resume.docx  michael_chen_resume.docx  sarah_johnson_resume.docx
static/css/: style.css
static/js/: main.js
templates/: index.html  login.html  signup.html
